[package]
name = "Pomka-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "mock"]}
sea-orm-migration = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-chrono"]}
serde = {version = "1.0.219", features = ["std", "derive"]}
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
